Further upgrades to newer java version for dispatchers and energy meters